# FileLockFinder

./: .gitignore  CMakeLists.txt  FileLockFinder.cpp  FileLockFinder.rc  FileLockFinder.sln  FileLockFinder.vcxproj  FileLockFinder.vcxproj.filters  README.md  resource.h
